--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .movie {
     font-weight: 300;
     padding: 20px;
     color: #fff;
     text-decoration: none;
     color: inherit;
+    font-family: 'Poppins', sans-serif;
   }
   
   .movie__img {
@@ -30,4 +32,5 @@
     margin-bottom: 5px;
     font-size: 14px;
     color:#fff;
+    opacity:0.6;
   }
