--- a/src/components/partials.module.css
+++ b/src/components/partials.module.css
@@ -1,7 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .header {
     display:flex;
-    justify-content: space-between;
     color:#fff;
-    font-size:16px;
+    justify-content: space-between;
+    position:fixed;
+    z-index:9999;
+    top:0;
+    left:0;
+    right:0;
     padding:20px 30px;
+    background:#111;
+    font-family: 'Poppins', sans-serif;
+}
+
+.logo {
+    width:100px;
+}
+
+.footer {
+    padding:40px 0;
+    background:#111;
+}
+
+.information {
+    width:1200px;
+    color:#fff;
+    margin:0 auto;
+    font-size:13px;
+}
+
+.footerTitle {
+    font-size:16px;
+    margin-bottom:20px;
+}
+
+.information p {
+    margin-bottom:10px;
 }
