--- a/src/routes/Detail.module.css
+++ b/src/routes/Detail.module.css
@@ -5,14 +5,14 @@ body {
 .container {
     display:flex;
     text-align:center;
-    padding:50px 30px;
+    padding:100px 30px 20px;
     width:60%;
     margin:0 auto;
     color:#fff;
 }
 
 .cover {
-    height: 90vh;
+    height: calc(100vh - 130px);
 }
 
 .contents {
@@ -34,7 +34,7 @@ body {
 }
 
 .genres {
-    opacity: 0.5;
+    opacity: 0.8;
     margin-bottom:40px;
 }
 
@@ -42,7 +42,7 @@ body {
     width:300px;
     margin:0 auto;
     margin-bottom:30px;
-    font-size:18px;
+    font-size:14px;
     line-height:1.5;
 }
 
@@ -69,5 +69,5 @@ body {
 .url {
     color:#fff;
     line-height:1.5;
-    opacity:0.5;
+    opacity:0.8;
 }
