--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -38,6 +38,11 @@ body {
 }
 
 @media screen and (max-width: 720px) {
+  body {
+    overflow:hidden;
+    width:100%;
+    height:100%;
+  }
   .container {
     padding-top:60px;
   }
