--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    height: 100%;
+    height: 100vh;
     padding-top:100px;
     /* display: flex;
     justify-content: center; */
@@ -39,7 +39,6 @@ body {
 
 @media screen and (max-width: 720px) {
   body {
-    overflow:hidden;
     width:100%;
     height:100%;
   }
