--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -1,10 +1,10 @@
 html {
-  width:100%;
+  width:100vw;
   height:100%;
   overflow:hidden;
 }
 body {
-  width:100%;
+  width:100vw;
   height:100%;
   overflow-x:hidden;
   background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
