--- a/src/components/partials.module.css
+++ b/src/components/partials.module.css
@@ -53,6 +53,8 @@
     
     .information {
         width:100%;
+        padding-right:20px;
+        padding-left:20px;
         text-align:left;
         font-size:11px;
     }
