--- a/src/components/partials.module.css
+++ b/src/components/partials.module.css
@@ -52,7 +52,7 @@
     }
     
     .information {
-        width:100%;
+        width:auto;
         text-align:left;
         font-size:11px;
     }
